# pico

./: .gitignore
blink/: CMakeLists.txt
c_Audio_Beep_Synthesis_Single_Core/: .vscode-ctags  CMakeLists.txt  beep_beep.c  beep_beep.c_original  beep_beep_original.c  dds_beep_sim  dds_beep_sim.c
dac_spi_test/: .vscode-ctags  CMakeLists.txt  main.c
enable_debugging/: .vscode-ctags  CMakeLists.txt  main.c
